# pulseOxi

./: CMakeLists.txt  README.md
cmake/: Findlibusb.cmake  generic-gcc-avr.cmake
firmware/: CMakeLists.txt  main.c  proto.h  usbconfig.h
hardware/: LEDs.sch  pulse.brd  pulse.sch
shared/: about.html  resources.qrc
src/: CMakeLists.txt  aboutdialog.cc  aboutdialog.hh  fir.hh  main.cpp  mainwindow.cpp  mainwindow.h  plot.cpp  plot.h  portdialog.cpp  pulse.cpp  pulse.h  settings.cc  settings.hh  settingsdialog.cc  settingsdialog.hh
